# scalecord

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  main.py  poetry.dockerfile  pyproject.toml  python.dockerfile  requirements.base.txt  requirements.torch.txt
.config/: dist.env.yml
config/: dist.env.yml  dist.models.yml
scalecord/: _autocomplete.py  _client.py  _commands.py  _constants.py  _state.py
scalecord/cli/: __init__.py  bot.py  generate.py  test.py  update.py  upscale.py
scalecord/types/: models.py
scalecord/utils/: files.py  generative.py  github.py  image.py  models.py  properties.py  upscale.py
