[tool.poetry]
name = "scalecord"
version = "0.1.3"
description = "An image upscaling bot for discord using PyTorch supported models from OpenModelDB."
authors = ["Investigamer <freethoughtleft@gmail.com>"]
license = "MPL-2.0"
readme = "README.md"

[[tool.poetry.packages]]
include = "scalecord"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
discord-py = "^2.3.2"
torch = {version = "^2.2.1+cu121", source = "pytorch"}
torchvision = {version = "^0.17.1+cu121", source = "pytorch"}
spandrel = "^0.2.1"
click = "^8.1.7"
omnitils = {git = "https://github.com/Investigamer/omnitils.git", tag = "1.2.0"}

[tool.poetry.group.dev.dependencies]
commitizen = "^3.14.0"
mypy = "^1.8.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.commitizen]
version = "0.1.3"
tag_format = "$major.$minor.$patch"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml:version"
]

[tool.poetry.scripts]
scalecord = 'scalecord.cli:ScalecordCLI'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
